--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@
     font-weight: 400;
     font-size: 18px;
     text-align: center;
+    margin-bottom: 45px;
 }
 .donate-amount{
     display: flex;
@@ -61,8 +62,125 @@
 }
 .amount{
     width: 136px;
-height: 123px;
-background: #FFEEEE;
-border: 2px solid #FF5959;
-border-radius: 5px;
+    height: 123px;
+    background: #FFEEEE;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 40px;
+    margin-left: 15px;
+    transition: 0.6;
+}
+.amount:hover{
+    color: #FF5959;
+    background: #FFEEEE;
+    border: 2px solid #FF5959;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+/* other amount style */
+.other-taka{
+    text-align: center;
+    color: #B3B3B3;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 9px;
+}
+.other-hr{
+    width: 765px;
+    margin-left: 375px;
+}
+.other-amount{
+    margin-bottom: 50px;
+}
+/*************
+ food family style 
+ ****************/
+.our-family{
+    display: flex;
+    text-align: center;
+    margin-bottom: 70px;
+}
+.food{
+    height: 265px;
+    width: 380px;
+    background-color: aliceblue;
+    padding: 10px 40px;
+    margin-left: 105px;
+    margin-right: 65px
+}
+.food-family{
+    height: 265px;
+    width: 380px;
+    background: rgba(255, 89, 89, 0.1);
+    border-radius: 5px;
+    margin-right: 80px;
+    padding: 13px;
+}
+.education{
+    height: 265px;
+    width: 380px;
+    background: #FFF4D6;
+    border-radius: 5px;
+    padding: 13px;
+}
+.icon{
+    padding: 6px 55px;
+    font-size: 50px;
+    color: #707070;
+    margin-top: 15px;
+}
+.food-titel{
+    
+}
+.food-description{
+} 
+/* their lives depends styles */
+.lives-depends{
+    display: flex;
+    margin-bottom: 50px;
+}
+.lives-content{
+    height: 300px;
+    width: 385px;
+    margin-left: 310px;
+    padding: 10px 15px;
+    margin-top: 18px;
+}
+.img img{
+    width: 391px;
+    height: 315px;
+    margin-left: 35px;
+    margin-top: 16px;
+}
+.primary{
+    background: #FF5959;
+    border-radius: 5px;
+    padding: 10px 25px;
+    margin-top: 10px;
+    border: none;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+/* 2nd section img */
+.second-img{
+    margin-left: 290px;
+}
+.second-img img{
+    width: 391px;
+    height: 315px; 
+}
+.need-servive{
+    display: flex;
+    margin-bottom: 50px;
+    margin-left: 30px;
+}
+
+.servive-content{
+    margin-left: 55px;
+    height: 300px;
+    width: 385px;
+    padding: 10px 15px;
+    margin-top: 18px;
 }
